<resources>
    <string name="app_name">wave</string>
    <string name="RecResult_default">Your recorded text will appear here:</string>
    <string name="AndroidRec_ButtonName">Android</string>
    <string name="DeepspeechRec_ButtonName">Deepspeech</string>
    <string name="Wav2vec2Rec_ButtonName">Wav2vec2</string>
    <string name="VoskRec_ButtonName">Vosk</string>
    <string name="DebugText_default">Click a button to activate a system…</string>
    <string name="Vosk_listening">Vosk is listening…</string>
    <string name="DebugText_Recognizing">Recognizing…</string>
    <string name="Android_listening">"Android is listening…"</string>
    <string name="Wav2vec2_error">Audio Record cannot initialize!</string>
    <string name="Android_API_less_then_8">Android\'s speech to text functionality requires API Level 8 to work properly.</string>
    <string name="DeepSpeechErrorFileDeleteFail">Failed to delete file!</string>
    <string name="DeepSpeechModelIsReady">Model is ready! + "\n"</string>
</resources>